# cpu-monitor

./: .pre-commit-config.yaml  MANIFEST.in  PLAN.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/cpu_monitor/: __init__.py  main.py
src/cpu_monitor/cli/: __init__.py  argument_parser.py
src/cpu_monitor/config/: __init__.py  settings.py
src/cpu_monitor/core/: __init__.py  cpu_reader.py  data_models.py
src/cpu_monitor/ui/: __init__.py  chart_renderer.py  colors.py  main_window.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core.py  test_integration.py  test_main.py  test_ui.py
